<resources>
    <string name="app_name">CompraVenta</string>
    <string name="complete_los_siguientes_campos">Complete los siguientes campos:</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="title_activity_menu_principal">menu_principal</string>

    <!--Strings del Side bar-->
    <string name="menu_home">Menú Principal</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_publicaciones">Mis Publicaciones</string>
    <string name="menu_ventas">Mis Ventas</string>
    <string name="menu_carrito">Carrito</string>

    <!--Strings del layout de sesion-->
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="password_dos">Repetir Contraseña</string>
    <string name="guardar_usuario">Guardar Usuario</string>
    <string name="email">Email</string>
    <string name="btn_iniciar_sesion">Iniciar Sesion</string>
    <string name="btn_registrarse">Registrarse</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_crear_cuenta">Crear Cuenta</string>

    <!--Strings del registro de usuarios -->
    <string name="cargar_producto">Cargar Producto</string>
    <string name="nombre_producto">Nombre del producto</string>
    <string name="precio">Precio</string>
    <string name="title_categoria">Categoria:</string>
    <string name="descripcion">Descripción</string>
    <string name="fotos">Fotos</string>
    <string name="select_img">Seleccione una imagen</string>
    <string name="btn_cargarproduct">Cargar</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="categoria">Categoría</string>

    <!--Strings del menú de 3 puntos -->
    <string name="opciones">Opciones</string>
    <string name="cerrar_sesion">Cerrar sesíon</string>

    <!--Strings del menú opciones -->
    <string name="btnAcept">Aceptar</string>
    <string name="idioma">Idioma</string>

    <!-- Layout de Home -->
    <string name="box_mayorprecio">Mayor Precio</string>
    <string name="box_menorprecio">Menor Precio</string>

    <!-- Layout de MuestraProductos -->
    <string name="comprar">Comprar</string>
    <string name="ubicacion">Ver ubicación</string>
    <string name="title_activity_ubicacion_producto">Map</string>
    <string name="split">$</string>
    <string name="agregar_carrito">Agregar al Carrito</string>
    <string name="title_descripcion">Descripción:</string>
    <string name="stock">Cantidad</string>

    <!--Strings de activities básicas -->
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome" translatable="false">"Welcome !"</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed" translatable="false">"Login failed"</string>
    <string name="title_activity_login_registro" translatable="false">LoginRegistro</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="hello_blank_fragment" translatable="false">Hello world</string>

    <!--Fragmente Perfil-->
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="direccion">Direccion</string>
    <string name="localidad">Localidad</string>
    <string name="telefono">Telefono</string>
    <string name="btn_guardar_datos">Guardar</string>
    <string name="btn_delete_usuario">Dar Baja</string>
    <string name="mis_datos">Mis Datos</string>

    <string-array name="datos_localidades">
        <item>Florencio Varela</item>
        <item>Dante Ardigo</item>
        <item>Bosques</item>
        <item>Quilmes</item>
        <item>Claypole</item>
        <item>Temperley</item>
        <item>Berazategui</item>
        <item>Bernal</item>
        <item>Ranelagh</item>
        <item>Zeballos</item>
        <item>Calzada</item>
        <item>Lomas de Zamora</item>
        <item>Avellaneda</item>
        <item>Banfield</item>
        <item>Lanus</item>
    </string-array>

</resources>