<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/round_home_black_18dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/round_face_black_18dp"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/round_business_center_black_18dp"
            android:title="@string/menu_publicaciones" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/round_attach_money_black_18dp"
            android:title="@string/menu_ventas" />
        <item
            android:id="@+id/nav_carrito"
            android:icon="@drawable/round_shopping_cart_black_18dp"
            android:title="@string/menu_carrito" />
    </group>
</menu>