<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".data.model.ui.perfil.PerfilFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/mis_datos"
            android:textAlignment="center"
            android:textSize="20sp"
            android:backgroundTint="@color/cardview_dark_background"/>
        <EditText
            android:id="@+id/edit_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="@string/nombre"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"/>
        <EditText
            android:id="@+id/edit_apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="@string/apellido"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"/>
        <EditText
            android:id="@+id/edit_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:inputType="phone"
            android:hint="@string/telefono"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"/>
        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"/>
        <EditText
            android:id="@+id/edit_localidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="@string/localidad"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"/>
        <EditText
            android:id="@+id/edit_direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="@string/direccion"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"/>
        <EditText
            android:id="@+id/edit_clave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"/>
        <EditText
            android:id="@+id/edit_clave_dos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="@string/password_dos"
            android:inputType="textPassword"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"/>
        <Button
            android:id="@+id/btn_guardar_datos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_guardar_datos"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/button_rounded"/>
        <Button
            android:id="@+id/btn_borrar_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_delete_usuario"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/button_rounded_border"/>

    </LinearLayout>

</FrameLayout>